--- a/project.ipynb
+++ b/project.ipynb
@@ -1,9 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "418c436a-f84f-41ef-8615-e2c1244bd313",
+   "metadata": {},
+   "source": [
+    "## Exploratory Data Analysis\n",
+    "### Description:\n",
+    "#### The dataset \"Education - Post 12th Standard.csv\" contains information about admisson on various colleges. I have taken this dataset from kaggle to derive insights by performing EDA."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "0c43e473-9466-41f5-b287-d0a39a0094a4",
+   "execution_count": null,
+   "id": "ff592e67-0680-4efe-9afe-9d8c992a4a86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +21,7 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n"
+    "%matplotlib inline"
    ]
   },
   {
@@ -755,6 +765,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a537d8e8-f65c-4830-ad7b-eda1827921a1",
+   "metadata": {},
+   "source": [
+    "#### From the above statiscal summary we can observe that\n",
+    "\n",
+    "##### On average of 3001 applications has been recieved by each university. Among them 2018 applications has been accepted, But only 779 students has enrolled the course.\n",
+    "##### Average S.F Ratio (student to faculty ratio) is 14,It ranges from 2.5 to 39.8.\n",
+    "##### Expend is ranges from 3186 to 10830 and the average expend is 9660.\n",
+    "##### Number of Phd faculty in a college ranges from 8 to 103 and the mean is 72.\n",
+    "##### Average cost of book is 549 and average personal espense is 1340.\n",
+    "##### Number of F.Undergrad in a college ranges from 139 to 31643 and the mean is 3699.\n",
+    "##### Number of P.Undergrad in a college ranges from 1 to 21836 and the mean is 855."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0385fcd5-1413-4bc2-adaf-37cd3eef2dc2",
    "metadata": {},
    "source": [
@@ -948,6 +974,20 @@
    ],
    "source": [
     "Education.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "251fdfa1-778b-4469-8b29-6bdb032bcd6e",
+   "metadata": {},
+   "source": [
+    "##### Observation\n",
+    "\n",
+    "###### There are 777 rows and 18 features\n",
+    "###### No null values are present in any of the feature\n",
+    "###### \"Names\" is the only object variable present in the dataset. Rest of the variables(17-variables) are integers and float datatypes\n",
+    "###### No duplicate rows are present in the dataset.\n",
+    "###### It seems dataset have no Anomalies, and Missing values. So we can proceed with a Data Visualization. i.e Univariate and Multivariate Analysis"
    ]
   },
   {
@@ -1194,6 +1234,23 @@
     "    sns.boxplot(df_num[df_num.columns[i]])\n",
     "    plt.title('Boxplot of.{}'.format(df_num.columns[i]),weight='bold',color='Blue',y=1.05)\n",
     "    plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f06decbf-f79a-44f4-b058-f00e3f3d58da",
+   "metadata": {},
+   "source": [
+    "#### From the above graph,we can observe the following informations\n",
+    "\n",
+    "###### Apps, Accept, Enroll, Top10perc are the variabes which are Right skewed and have many outliers on higher extreme.\n",
+    "###### F.Undergrad, P.Undergrad, Personal, Expend are the variabes which are Right skewed and has many outliers on higher extreme.\n",
+    "###### Top25perc is the only variable which has no ouliers and closely follows the normal distibution.\n",
+    "###### Outstate,Grad.Rate and Room.Board are the variables have very few Outliers and resembles normal distribution.\n",
+    "###### The variable Books has outliers on both the extreme and also right skewed.\n",
+    "###### PhD, Terminal are the variabes are Left skewed and has many outliers on lower extreme.\n",
+    "###### S.F.Ratio have outliers on both extreme and slightly left skewed\n",
+    "####### perc.alumini have few ouliers on higher extreme and slightly left skewed"
    ]
   },
   {
